--- a/WeldingPassportsApp/WeldingPassportsApp/Views/_ViewImports.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Domain
 @using Infrastructure
 @using Application.ViewModels
+@using Application.Security
 @using Microsoft.AspNetCore.Identity
 @using WeldingPassportsApp
 @using WeldingPassportsApp.Controllers
