--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Examinations/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Examinations/Edit.cshtml
@@ -4,7 +4,10 @@
 
 @{
     ViewData["Title"] = @Localizer["Edit Examination"];
+    var currentUrl = ViewBag.CurrentUrl;
     var returnUrl = ViewBag.ReturnUrl;
+    var userCanCreateExamCenters = User.CanCreate(ClaimsTypesStore.ExamCenters);
+    var userCanCreateTrainingCenters = User.CanCreate(ClaimsTypesStore.TrainingCenters);
 }
 
 <h1>@Localizer["Edit Examination"]</h1>
@@ -22,17 +25,39 @@
     </div>
     <div class="form-group row">
         <label asp-for="ExamCenterID" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <select asp-for="ExamCenterID" class="form-control" asp-items="Model.ExamCenterItems"></select>
-            <span asp-validation-for="TrainingCenterID" class="text-danger"></span>
+        <div class="col-sm-10 input-group">
+            <select asp-for="ExamCenterID" class="form-control" asp-items="Model.ExamCenterItems">
+                <option value="" selected disabled hidden>@Localizer["Choose exam center"]</option>
+            </select>
+            @if (userCanCreateExamCenters)
+            {
+                <div class="input-group-append">
+                    <a id="ExamCenterSelect" asp-controller="@typeof(ExamCentersController).GetNameOfController()" asp-action="@nameof(ExamCentersController.Create)" asp-route-returnUrl="@currentUrl" class="btn btn-primary" type="button">@Localizer["Create"]</a>
+                </div>
+            }
+            <div class="input-group-append">
+                <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
+            </div>
         </div>
+        <span asp-validation-for="TrainingCenterID" class="text-danger"></span>
     </div>
     <div class="form-group row">
         <label asp-for="TrainingCenterID" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <select asp-for="TrainingCenterID" class="form-control" asp-items="Model.TrainingCenterItems"></select>
-            <span asp-validation-for="TrainingCenterID" class="text-danger"></span>
+        <div class="col-sm-10 input-group">
+            <select asp-for="TrainingCenterID" class="form-control" asp-items="Model.TrainingCenterItems">
+                <option value="" selected disabled hidden>@Localizer["Choose training center"]</option>
+            </select>
+            @if (userCanCreateTrainingCenters)
+            {
+                <div class="input-group-append">
+                    <a id="TrainingCenterSelect" asp-controller="@typeof(TrainingCentersController).GetNameOfController()" asp-action="@nameof(TrainingCentersController.Create)" asp-route-returnUrl="@currentUrl" class="btn btn-primary" type="button">@Localizer["Create"]</a>
+                </div>
+            }
+            <div class="input-group-append">
+                <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
+            </div>
         </div>
+        <span asp-validation-for="TrainingCenterID" class="text-danger"></span>
     </div>
     <div class="form-group row">
         <div class="col-sm-10">
@@ -42,3 +67,7 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     </div>
 </form>
+
+@section Scripts {
+    <script src="~/js/ResetSelect.js"></script>
+}
